<resources>
    <string name="app_name">Training Plus</string>
    <string name="settings">Ajustes</string>
    <string name="lorem_ipsum">Lorem Ipsum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>


    <string name="samples_title">Titulo 1</string>
    <string name="samples_subhead">Subtitulo 1</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">Titulo Navegación</string>
    <string name="navigation_quotes">Cuotas</string>
    <string name="navigation_samples">Ejemplos</string>
    <string name="navigation_settings">Ajustes</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">item 1</string>
    <string name="navigation_dummy_item_2">item 2</string>

    <string name="btnStart">Iniciar Sesión</string>
    <string name="btnRegister">Regístrate</string>
    <string name="name">NOMBRE</string>
    <string name="lastName">APELLIDO</string>
    <string name="email">E-MAIL</string>
    <string name="phone">MÓVIL</string>
    <string name="pass">CONTRASEÑA</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>

    <string name="location">Encuentrame</string>

</resources>
